--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://kesavan.db.elephantsql.com:5432/ryqjhlub
-spring.datasource.username=ryqjhlub
-spring.datasource.password=v4d0E86kJ-0oTcNDSPVRJXb74ySh2tEF
+spring.datasource.url=jdbc:postgresql://us-east-1.7cfbdd64-3749-4bd7-b138-03ef10318127.aws.ybdb.io:5433/postgres
+spring.datasource.username=arfian
+spring.datasource.password=11Feb1993
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -8,3 +8,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 spring.liquibase.enabled=true
+
+expToken=3600
