Fixing authorisasi & transfer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 spring.liquibase.enabled=true
 
 expToken=3600
+minimumSaldo=10000
